force-app/main/default/objects/Account_Relation_IQVIA__c/Account_Relation_IQVIA__c.object-meta.xml
<CustomObject>
    <description>Account Relation IQVIA</description>
    <label>Account Relation IQVIA</label>
    <nameField>
        <label>Account Relation IQVIA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts Relations IQVIA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>