force-app/main/default/objects/Account_Relation_IQVIA__c/fields/Wkp_Relation_Begin_Valid_Date__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Relation_Begin_Valid_Date__c</fullName>
    <label>Wkp. Relation Begin Valid_Date</label>
    <type>Date</type>
</CustomField>