force-app/main/default/objects/Account_Relation_IQVIA__c/fields/Wkp_Relation_Code__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Relation_Code__c</fullName>
    <description>Pass thru field for the IQVIA data connector</description>
    <label>Wkp Relation Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>