force-app/main/default/objects/Account_Relation_IQVIA__c/fields/Wkp_Relation_ID__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Relation_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Wkp Relation ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>