force-app/main/default/objects/Account_Relation_IQVIA__c/fields/Wkp_Relation_Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Relation_Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wkp Relation Is Deleted</label>
    <type>Checkbox</type>
</CustomField>