force-app/main/default/objects/Account_Relation_IQVIA__c/fields/Wkp_Relation_Link__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Relation_Link__c</fullName>
    <description>Wkp Relation Link</description>
    <label>Wkp Relation Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>