force-app/main/default/objects/Account_Relation_IQVIA__c/fields/Wkp_Relation_Workplace_ID__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Relation_Workplace_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Wkp_Relation_Workplace_ID</description>
    <label>Wkp Relation Workplace ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Relations IQVIA</relationshipLabel>
    <relationshipName>Wkp_Relation_Workplace</relationshipName>
    <type>Lookup</type>
</CustomField>