force-app/main/default/objects/Account_Relation_IQVIA__c/fields/Wkp_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Wkp_Relationship_Type__c</fullName>
    <label>Wkp Relationship Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>